--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -474,7 +474,7 @@ body {
   padding: 10px;
   margin-top: 10px;
   margin-bottom: 10px;
-  background: rgb(177, 99, 251);
+  background: #4070f4;
   border-radius: 10px;
 }
 .accordion__question p {
