--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -222,9 +222,10 @@ img {
   color: var(--first-color);
 }
 .home__img {
+  justify-self: center;
   position: absolute;
   right: 0;
-  bottom: -6rem;
+  bottom: 2rem;
   width: 295px;
 }
 
@@ -326,9 +327,14 @@ img {
   border-radius: 0.5rem;
   overflow: hidden;
 }
+
+.work__img button {
+  cursor: pointer;
+}
+
 .work__img img {
   transition: 1s;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 .work__img img:hover {
   transform: scale(1.1);
@@ -470,34 +476,59 @@ body {
   width: 600px;
   margin: auto;
 }
+
+.section {
+  align-items: center;
+  justify-content: center;
+}
+
 .accordion {
-  padding: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  background: #4070f4;
-  border-radius: 10px;
+  width: 90%;
+  max-width: 600px;
+  margin: 2rem auto;
 }
-.accordion__question p {
-  margin: 5px;
-  padding: 0;
-  font-family: Verdana;
-  font-size: 20px;
+.accordion-item {
+  background-color: rgb(255, 255, 255);
+  color: #111;
+  margin: 1rem 0;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.25);
 }
-.accordion__answer p {
-  margin: 5px;
-  padding: 10px;
-  font-size: large;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: rgb(46, 46, 46);
-  background: white;
-  border-radius: 10px;
-}
-.accordion:hover {
+.accordion-item-header {
+  padding: 0.5rem 3rem 0.5rem 1rem;
+  min-height: 3rem;
+  line-height: 1.25rem;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  position: relative;
   cursor: pointer;
 }
-.accordion__answer {
-  display: none;
+.accordion-item-header::after {
+  background-color: white;
+  content: "\002B";
+  font-size: 2rem;
+  position: absolute;
+  right: 1rem;
 }
-.accordion.active .accordion__answer {
-  display: block;
+.accordion-item-header.active::after {
+  content: "\2212";
+  margin-left: 95%;
+}
+.accordion-item-body {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-out;
+}
+.accordion-item-body-content {
+  padding: 1rem;
+  line-height: 1.5rem;
+  border-top: 1px solid;
+  border-image: linear-gradient(to right, transparent, #34495e, transparent) 1;
+}
+
+@media (max-width: 767px) {
+  html {
+    font-size: 14px;
+  }
 }
