--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -241,7 +241,18 @@ img {
 .button:hover {
   box-shadow: 0 10px 36px rgba(0, 0, 0, 0.15);
 }
-
+.button2 {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: 0.75rem 2.5rem;
+  font-weight: var(--font-semi);
+  border-radius: 0.5rem;
+  cursor: pointer;
+}
+.button2:hover {
+  box-shadow: 0 10px 36px rgba(0, 0, 0, 0.15);
+}
 /* ===== ABOUT =====*/
 .about__container {
   row-gap: 2rem;
@@ -530,5 +541,91 @@ body {
 @media (max-width: 767px) {
   html {
     font-size: 14px;
+  }
+}
+
+/*== TEAM ==*/
+
+.team__text {
+  text-align: center;
+}
+.profiles {
+  display: flex;
+  justify-content: space-around;
+  margin: 20px 150px;
+}
+
+.profile {
+  flex-basis: 200px;
+}
+
+.profile .profile-img {
+  height: 200px;
+  width: 200px;
+  border-radius: 10%;
+  filter: grayscale(100%);
+  cursor: pointer;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.25);
+  transition: 400ms;
+}
+
+.profile:hover .profile-img {
+  filter: grayscale(0);
+}
+
+.user-name {
+  color: var(--first-color);
+  margin-top: 30px;
+  font-size: 22px;
+}
+
+.profile h7 {
+  font-size: 18px;
+  font-weight: 100;
+  letter-spacing: 1px;
+  color: #ccc;
+}
+
+/* .profile p {
+  font-size: 16px;
+  margin-top: 20px;
+  text-align: justify;
+} */
+
+@media only screen and (max-width: 1150px) {
+  .profiles {
+    flex-direction: column;
+  }
+
+  .profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .profile p {
+    text-align: center;
+    margin: 20px 60px 80px 60px;
+    font-size: 20px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .heading {
+    font-size: 40px;
+    color: white;
+    text-align: center;
+  }
+
+  .heading span {
+    font-size: 15px;
+  }
+
+  .profiles {
+    margin: 20px 0;
+  }
+
+  .profile p {
+    margin: 20px 10px 80px 10px;
   }
 }
